// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KarutaCard /> should render component when kimariji is long 1`] = `
<article
  className="sc-bdVaJa dRltei"
>
  <h3
    className="sc-bwzfXH kksYFg"
  >
    二番
     / 
    詠み手
  </h3>
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "overflow": "hidden",
        "position": "relative",
        "width": 200,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": "100%",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="100 200 300"
        srcSet="asdfasdf"
      />
      <img
        alt="二番"
        onLoad={[Function]}
        src="karuta_002.jpg"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 0.5s",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"karuta_002.jpg\\" alt=\\"二番\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
  <div
    className="sc-htpNat cEmcFD"
  >
    <div
      className="sc-bxivhb lnrVgD"
    >
      原文
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      初句 二句 三句
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      四句 五句
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      <span
        className="sc-EHOje hDCzQl"
      >
        しょく にく
      </span>
      にく さんく
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      よんく ごく
    </div>
  </div>
  <div
    className="sc-htpNat cEmcFD"
  >
    <div
      className="sc-bxivhb lnrVgD"
    >
      訳
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      歌の訳
    </div>
  </div>
</article>
`;

exports[`<KarutaCard /> should render component when kimariji is short 1`] = `
<article
  className="sc-bdVaJa dRltei"
>
  <h3
    className="sc-bwzfXH kksYFg"
  >
    一番
     / 
    詠み手
  </h3>
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "overflow": "hidden",
        "position": "relative",
        "width": 200,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": "100%",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="100 200 300"
        srcSet="asdfasdf"
      />
      <img
        alt="一番"
        onLoad={[Function]}
        src="karuta_001.jpg"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 0.5s",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"karuta_001.jpg\\" alt=\\"一番\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
  <div
    className="sc-htpNat cEmcFD"
  >
    <div
      className="sc-bxivhb lnrVgD"
    >
      原文
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      初句 二句 三句
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      四句 五句
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      <span
        className="sc-EHOje hDCzQl"
      >
        しょ
      </span>
      く にく さんく
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      よんく ごく
    </div>
  </div>
  <div
    className="sc-htpNat cEmcFD"
  >
    <div
      className="sc-bxivhb lnrVgD"
    >
      訳
    </div>
    <div
      className="sc-ifAKCX laGmay"
    >
      歌の訳
    </div>
  </div>
</article>
`;
